force-app/main/default/objects/LOBMappingDetails__mdt/LOBMappingDetails__mdt.object-meta.xml
<CustomObject>
    <description>Contains mapping of LOB and CC values to their respective available Source, Channel and Description</description>
    <label>LOB Mapping Details</label>
    <pluralLabel>LOB Mapping Details</pluralLabel>
</CustomObject>