force-app/main/default/objects/LOBMappingDetails__mdt/fields/CCValue__c.field-meta.xml
<CustomField>
    <fullName>CCValue__c</fullName>
    <description>Denotes the additional CC values.</description>
    <inlineHelpText>Denotes the additional CC values.</inlineHelpText>
    <label>Additional CC Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>