force-app/main/default/objects/LOBMappingDetails__mdt/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Denotes available channel values separated by semi-colon.</description>
    <inlineHelpText>Denotes available channel values separated by semi-colon.</inlineHelpText>
    <label>Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>