force-app/main/default/objects/LOBMappingDetails__mdt/fields/Complaint_Type__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Type__c</fullName>
    <label>Complaint Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branch Walkin</fullName>
                <default>true</default>
                <label>Branch Walkin</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>