force-app/main/default/objects/LOBMappingDetails__mdt/fields/Exclusion_Bu_s__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_Bu_s__c</fullName>
    <label>Exclusion Bu&apos;s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>