force-app/main/default/objects/LOBMappingDetails__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Denotes if the record is still in use.</description>
    <inlineHelpText>Denotes if the record is still in use.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>