force-app/main/default/objects/LOBMappingDetails__mdt/fields/New_Source__c.field-meta.xml
<CustomField>
    <fullName>New_Source__c</fullName>
    <label>New Source</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>