force-app/main/default/objects/LOBMappingDetails__mdt/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Denotes Source mapping.</description>
    <inlineHelpText>Denotes Source mapping.</inlineHelpText>
    <label>Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>