force-app/main/default/objects/LOBMappingDetails__mdt/fields/Source_Code__c.field-meta.xml
<CustomField>
    <fullName>Source_Code__c</fullName>
    <label>Source Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <default>true</default>
                <label>00</label>
            </value>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>02</fullName>
            </value>
            <value>
                <fullName>03</fullName>
            </value>
            <value>
                <fullName>001</fullName>
            </value>
            <value>
                <fullName>04</fullName>
            </value>
            <value>
                <fullName>05</fullName>
            </value>
            <value>
                <fullName>06</fullName>
            </value>
            <value>
                <fullName>07</fullName>
            </value>
            <value>
                <fullName>08</fullName>
            </value>
            <value>
                <fullName>09</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>002</fullName>
            </value>
            <value>
                <fullName>003</fullName>
            </value>
            <value>
                <fullName>004</fullName>
            </value>
            <value>
                <fullName>005</fullName>
            </value>
            <value>
                <fullName>006</fullName>
            </value>
            <value>
                <fullName>007</fullName>
            </value>
            <value>
                <fullName>008</fullName>
            </value>
            <value>
                <fullName>009</fullName>
            </value>
            <value>
                <fullName>010</fullName>
            </value>
            <value>
                <fullName>011</fullName>
            </value>
            <value>
                <fullName>012</fullName>
            </value>
            <value>
                <fullName>013</fullName>
            </value>
            <value>
                <fullName>014</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>