force-app/main/default/objects/LOBMappingDetails__mdt/fields/Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Sub_Source__c</fullName>
    <label>Sub  Source</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>