force-app/main/default/objects/LOBMappingDetails__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Denotes if the value is LOB, CC or LOC.</description>
    <inlineHelpText>Denotes if the value is LOB, CC or LOC.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LOB</fullName>
                <default>true</default>
                <label>LOB</label>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>LOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>